# data_platform_reference_implementation

./: .dockerignore  .gitignore  Dockerfile  README.md  dbt_project.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
models/example/: schema.yml
models/github/: my_commits.sql  sources.yaml
